# Network-Intrusion-detection

./: .gitignore  README.md  config.yaml  index.html  notes.md  pyproject.toml  requirements.txt
api/: main.py
api/templates/: index.html
artifacts/: ann_mlp_model.pkl  xgb_model.pkl
inference/: predictor.py
notebook/: EDA.ipynb
src/: __init__.py  config_loader.py  data_loader.py  pipeline.py  preprocessor.py  train_ann.py  train_xgb.py  utils.py  website_feature_extraction.py
