[project]
name = "phising-website-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dnspython>=2.8.0",
    "fastapi>=0.124.4",
    "imbalanced-learn>=0.14.0",
    "jinja2>=3.1.6",
    "joblib>=1.5.2",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "python-multipart>=0.0.20",
    "python-whois>=0.9.6",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "tldextract>=5.3.0",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]
